# my-story-agent

./: .gitignore  CLAUDE.md  README.md  langgraph.json  main.py  pyproject.toml  requirements.txt
configs/: agents.yaml  settings.yaml
configs/prompts/: analyst.yaml  research.yaml  writer.yaml
docs/: ARCHITECTURE.md  GRAPH_SCHEMA.md  MODELS.md  SETUP.md  USAGE.md  test.md
src/: __init__.py
src/agents/: __init__.py
src/agents/analyst_agent/: __init__.py  agent.py  prompts.py  state.py  tools.py
src/agents/research_agent/: __init__.py  agent.py  prompts.py  state.py  tools.py
src/agents/writer_agent/: __init__.py  agent.py  prompts.py  state.py  tools.py
src/core/: __init__.py  base_agent.py  config.py  exceptions.py  llm.py  logger.py
src/graphs/: __init__.py  knowledge_graph.py  state.py
src/tools/: __init__.py
src/tools/cypher/: __init__.py  manager.py
src/tools/parsers/: __init__.py  csv_reader.py  document_parser.py  docx_parser.py  md_parser.py  text_parser.py
